--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h3 class="about-content__head">SHINO（しの）</h3>
                     <p class="about-content__text">
                         今治市在住<br>
-                        気になることを極めたいと思いスクールで勉強。
+                        気になることに本気で学びたい！！と思いスクールへ。
                         </p>
                         <p class="about-content__text">
                         「デザインはおしゃれなだけではない！」<br>
