--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
         <div class="contents-container">
         <div class="works-items">
             <article class="works-article">
-                <a href="#">
+                <a href="https://machatonbo.github.io/woodenstudio2/">
                     <div class="pictuer-frame">
                         <img src="img/design1.jpg" alt="サムネイル画像" class="works-article__img">
+                        <link rel="stylesheet" href="">
                     </div>
                     <h3 class="works-article__title">WEBサイトデザイン</h3>
-                    <p class="works-article__excerpt">イメージを形に</p>
+                    <p class="works-article__excerpt">愛されるサイト</p>
                 </a>
             </article>
             <article class="works-article">
-                <a href="#">
+                <a href="https://machatonbo-web.hungry.jp/lp-sample/lp/">
                     <div class="pictuer-frame">
                         <img src="img/design2.jpg" alt="サムネイル画像" class="works-article__img">
                     </div>
@@ -88,7 +89,7 @@
                 </a>
             </article>
             <article class="works-article">
-                <a href="#">
+                <a href="https://www.canva.com/design/DAGsTmZVX7c/_accms31WNWIEiQjWgWuXw/view?utm_content=DAGsTmZVX7c&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hfc656b5713">
                     <div class="pictuer-frame">
                         <img src="img/design3.jpg" alt="サムネイル画像" class="works-article__img">
                     </div>
@@ -98,9 +99,9 @@
             </article>
         </div>
         </div>
-        <a href="#" class="btn btn--stroke">
+        <!-- <a href="#" class="btn btn--stroke">
             <p>View more.</p>
-        </a>
+        </a> -->
     </section>
     
     <section id="about" class="section-about">
@@ -114,7 +115,7 @@
                     <h3 class="about-content__head">SHINO（しの）</h3>
                     <p class="about-content__text">
                         今治市在住<br>
-                        気になることに本気で学びたい！！と思いスクールへ。
+                        気になることを本気で学びたい！と思いスクールで勉強。
                         </p>
                         <p class="about-content__text">
                         「デザインはおしゃれなだけではない！」<br>
